--- a/index.html
+++ b/index.html
@@ -22,7 +22,25 @@
     <section id="sobre">
         <img src="images/perfil.jpg" alt="Foto de Mateus">
         <h2>Sobre Mim</h2>
-        <p>Olá! Meu nome é Mateus e sou um desenvolvedor web e responsivos.</p>
+        <p>💻 Desenvolvedor | [JAVA]
+
+📍 Localização (Montes claros)
+
+🛠️ Sobre mim
+
+"Sou um desenvolvedor focado em linguagens/tecnologias, e estou sempre buscando aprender novas tecnologias."
+
+📂 Meus Projetos
+
+🔹 [Futebol Mania Noticia]
+
+📌 [Um site sobre noticias de futebol transferências datas de jogos etc.] 🔗 Link: [Repositório GitHub ou Site} 📈 Habilidades
+
+🖥️ Linguagens: [Python, Java Script, etc.
+
+🔧 Ferramenta: { GitHub.
+
+🌐 Banco de Dados: [MySQL.</p>
     </section>
 
     <section id="projetos">
